# sql-finetune

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: data.yaml  dpo.yaml  model.yaml  reward.yaml  sft.yaml
scripts/: __init__.py  build_preferences.py  collect_rollout.py  download_data.py  eval.py  preprocess_data.py  train_dpo.py  train_sft.py
sql_agent/: __init__.py
sql_agent/dataset_utils/: __init__.py  preprocessing.py  prompts.py
sql_agent/env/: __init__.py  sql_sandbox.py
sql_agent/generation/: __init__.py  extraction.py
sql_agent/models/: __init__.py  tokenizer.py
sql_agent/reward/: __init__.py  execution_reward.py
sql_agent/utils/: __init__.py  config.py  io.py  logging_setup.py  timestamp.py  torch_utils.py
tests/: conftest.py  test_build_preferences.py  test_collect_rollout.py  test_execution_reward.py  test_extraction.py  test_preprocessing.py  test_prompts.py  test_sql_sandbox.py  test_tokenizer.py  test_torch_utils.py  test_utils.py
